# codeforcovid

./: README.md
codeforcovid/: images.db  konnect.db  main.py  pyproject.toml
codeforcovid/static/: lo.css
codeforcovid/templates/: available.html  food.html  home.html  htmltemplate.txt  index.html  login.html  money.html  others.html  profile.html  signup.html
