[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "glassemptydemands"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-ngrok = "^0.0.25"
python = "^3.7"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4"
auth = "^0.5.3"
django-user = "^0.2.1"
oauthlib = "^3.1"
python-dotenv = "^0.13.0"
passlib = "^1.7"
pygame = "^1.9"
[tool.poetry.dev-dependencies]
